@startuml AppointmentInfrastructureClasses

!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Deployment.puml

interface IAppointmentRepository <<interface>> #aliceblue;line:blue;text:blue {
  + opCreate(appointment): Appointment
  + opUpdate(appointment): boolean
  + opView(id): Appointment
  + opCheckScheduleConflict(medId, dateTime): boolean
  + opListAll(): List<Appointment>
}

class SQLiteAppointmentRepository <<repository>> #PaleGreen;line:Black;text:Black implements IAppointmentRepository {
  - databaseConnection: IDatabaseConnection
  + opCreate(appointment): Appointment
  + opUpdate(appointment): boolean
  + opView(id): Appointment
  + opCheckScheduleConflict(medId, dateTime): boolean
  + opListAll(): List<Appointment>
  - mapResultSetToAppointment(rs): Appointment
}

interface IDateBaseConnection <<interface>> #aliceblue;line:blue;text:blue {
  + connect(): Connection
}

class SQLiteConnection <<persistence>> #PaleGreen;line:Black;text:Black implements IDateBaseConnection {
}

' from domain layer
class Appointment<Domain Layer> <<entity>> #LightYellow;line:Black;line.dotted;text:gray {
  - id: long
  - citizenshipCardPatient: long
  - phoneNumber: String
  - medicalStaffId: long
  - dateAndTime: Date
  - attentionType: AttentionType
  - status: AppointmentStatus
  - reason: String
}

' from domain layer
enum AppointmentStatus<Domain Layer> <<enumeration>> #LightBlue;line:Black;line.dotted;text:gray {
  SCHEDULED
  RESCHEDULED
  CANCELLED
  ATTENDED
}

' from domain layer
enum AttentionType<Domain Layer> <<enumeration>> #LightBlue;line:Black;line.dotted;text:gray {
  GENERAL
  SPECIALIZED
}

IAppointmentRepository ..> Appointment
SQLiteAppointmentRepository ..> IDateBaseConnection
SQLiteAppointmentRepository ..> Appointment
SQLiteAppointmentRepository ..> AppointmentStatus
SQLiteAppointmentRepository ..> AttentionType

@enduml
